<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <EditText

        android:id="@+id/Login_inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:importantForAutofill="no" />


    <EditText


        android:id="@+id/Password_inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <Button

        android:id="@+id/SignIn_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#050505"
        android:text="@string/sign_in_btn_txt" />

    <Button

        android:id="@+id/Register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:backgroundTint="#050505"
        android:text="@string/register_btn_txt" />


</LinearLayout>